--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^10.12.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tts-react": "^3.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
